# splot

./: .travis.yml  README  TODO.txt  splot.cabal  stack.yaml
Tools/: ColorMap.hs  SPlotMain.hs  SPlotTest.hs  StatePlot.hs
